# server/src/utils/success.go
@@ -1,7 +1,0 @@
-package utils
-
-type SuccessResponse struct {
-	Code    int         `json:"code"`
-	Message string      `json:"message"`
-	Data    interface{} `json:"data"`
-}	
